syntax = "proto3";

// If you make any changes make sure you run: make regenerate-grpc

package agentrpc;

message HttpHeader {
  string key = 1;
  repeated string value = 2;
}

message KubernetesRequest {
  string cluster_id = 1;
  string verb = 2;
  // /absolute/path?and=query
  string uri_path_and_query = 3;
  repeated HttpHeader headers = 4;
  bytes body = 5;
}

message KubernetesResponse {
  uint32 status_code = 1;
  string status_message = 2;
  repeated HttpHeader headers = 3;
  bytes body = 4;
}

service ReverseProxyService {
  // Provides a stream of responses and returns a stream of requests.
  // agentg exposes this method for agentk to use.
  rpc GetRequests (stream KubernetesResponse) returns (stream KubernetesRequest) {}
}
